# dazzle-sdk

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  README.md
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: check-commit-messages.yml  confidentiality-scan.yml  dotnet.yml  lint.yml  no-internal-files.yml  patch-integrity.yml  release.yml  security.yml  test-android.yml  test-c-core.yml  test-ios.yml  valkey-version-watch.yml
core/compat/: dazzle_compat.h
core/native-lite/: CMakeLists.txt  build.sh
core/native-lite/include/: dazzle_lite.h
core/platform/: dazzle_ios.c  dazzle_ios.h  dazzle_llama.cpp  dazzle_llama.h  dazzle_vs.h
core/transport/: dazzle_slot_safe.h  dazzle_transport.c  dazzle_worker_pool.c  dazzle_worker_pool.h  io_uring_transport.h  ring_buffer.h
core/web/: CMakeLists.txt  build.sh
core/web/src/: dazzle_wasm.cpp
docs/: ARCHITECTURE.md  COMMIT_POLICY.md  ROADMAP.md
docs/android/: LIBRARY_GUIDE.md
docs/architecture/: edge_bundle.md
docs/sdk/: API_CONTRACT.md  README.md  cpp-server-quickstart.md  dotnet-quickstart.md  edge_models.json  flutter-quickstart.md  jsi-architecture.md  react-native-quickstart.md  react-quickstart.md
docs/technical/: README.md  build-release-process.md  cross-target-abi.md  performance.md  security.md  storage-layer.md  threading-model.md  vector-index.md
experiment/backends/: CHANGELOG.md
experiment/backends/android/cpp/: CMakeLists.txt
experiment/backends/android/cpp/llamacpp/: llamacpp_jni.c
experiment/backends/android/cpp/lmdb/: lmdb_jni.c
experiment/backends/android/cpp/rocksdb/: rocksdb_jni.cpp
experiment/backends/android/cpp/sqlitevec/: sqlitevec_jni.c
experiment/backends/android/cpp/sqlitevectorai/: sqlitevectorai_jni.c
research/paper/: Makefile  REPRODUCIBILITY.md  appendix_b_harness_postmortem.md  companion_engineering_report.md  paper_v2_en.md  paper_v2_es.md  rag_2x2_with_ci.md  vecbench_cross_platform_ci.md  vecbench_cross_run_ci.md  vecbench_multitarget_ci.md
research/results/: RAG_RETRACTION.md  embed_moto_g35_5G.json  hnsw_parity_moto_g35_5G.json  hnsw_parity_x86.json  rag_e2e_moto_g35_5G_1777191828315.json  rag_moto_g35_5G.json  v1_vs_postfix_diff.md  vecbench_moto_g35_5G_2026-04-22.json  vecbench_moto_g35_5G_4way_2026-04-22.json  vecbench_moto_g35_5G_neon_2026-04-22.json  vecbench_moto_g35_5G_optimized_2026-04-22.json  vecbench_moto_g35_5G_parallel_2026-04-22.json  vecbench_moto_g35_5G_r12b_fair_objectbox.json  vecbench_moto_g35_5G_round10_sq8_direct_neon.json  vecbench_moto_g35_5G_round11_fp32_direct_neon.json  vecbench_moto_g35_5G_round4.json  vecbench_moto_g35_5G_round4b.json  vecbench_moto_g35_5G_round5_sq8.json  vecbench_moto_g35_5G_round6_l2sq.json  vecbench_moto_g35_5G_round7_rerank.json  vecbench_moto_g35_5G_round8_f16_prefetch.json  vecbench_moto_g35_5G_round9_alpha2.json  vecdim_moto_g35_5G_largeheap.json  vecdim_moto_g35_5G_r12b_dazzle_only.json  vecdim_moto_g35_5G_sqlvecai.json  veclive_moto_g35_5G_r13.json  veclive_moto_g35_5G_r14_r15.json  veclive_moto_g35_5G_r14_r15_addDirect.json  veclive_moto_g35_5G_r14_r15_shared_gmutex.json  veclive_moto_g35_5G_r16.json  veclive_moto_g35_5G_r17.json  veclive_moto_g35_5G_r18.json  vecthru_moto_g35_5G_r11_baseline.json  vecthru_moto_g35_5G_r12a_shared_mutex.json  vecthru_moto_g35_5G_r12b_per_call_ef.json
research/scripts/: allTestDevicesAndroidAndIos.sh  analyze_results.py  analyze_sqlite_family_storage.py  analyze_storage_microbench.py  analyze_tfi_operating_curve.py  analyze_vector_sqlite_family.py  analyze_vector_sqlite_family_sweep.py  bge_recall_at_k.py  bootstrap_rag_cross_platform.py  bootstrap_rag_metrics.py  bootstrap_vecbench_cross_run.py  bootstrap_vecbench_lats.py  check_paper_consistency.py  diff_v1_postfix_rag.py  generate_dataset.py  generate_dataset_iot_valkey9.py  generate_dataset_v3.py  hnsw_parity.py  make_vector_bench_table.py  nq_slice.py  pin_model_hashes.py  plot_ablation_sweep.py  recompute_rag_metrics.py  regen_body_tex.sh  run_ablation_sweep.sh  run_all_backends.sh  run_experiment.sh  run_full_benchmark.sh  run_ios_benchmark.sh  run_reviewer_mitigation_suite.sh  run_storage_microbench_per_backend.sh  run_storage_microbench_per_backend_ios.sh  run_vector_sqlite_family.sh  run_vector_sqlite_family_sweep.sh  test_rag_scoring.py  vector_bench_ground_truth.py
samples/: PROVIDERS.md  README.md
samples/_scripts/: download_models.sh  link_flutter.sh  link_rn.sh  smoke_providers.sh  test_android.sh  test_flutter_android.sh  test_flutter_ios.sh  test_ios.sh  test_rn_android.sh  test_rn_ios.sh  validate_sample_report.py
samples/chat-iot/: README.md
samples/chat-iot-flutter/: README.md  pubspec.yaml
samples/chat-iot-rn/: App.tsx  README.md  app.json  package.json
samples/chat-kb/: README.md
samples/chat-kb-flutter/: README.md  pubspec.yaml
samples/chat-kb-rn/: App.tsx  README.md  app.json  metro.config.js  package.json
samples/chat-memory/: README.md
samples/chat-memory-flutter/: README.md  pubspec.yaml
samples/chat-memory-rn/: App.tsx  README.md  app.json  package.json
samples/dotnet-vector-search/: Program.cs  dotnet-vector-search.csproj
scripts/: install-git-hooks.sh
scripts/git-hooks/: pre-commit-confidentiality.sh
sdk/android/: .gitignore  CHANGELOG.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdk/android/src/main/cpp/: CMakeLists.txt  apply_patches.sh  dazzle_jni.c  dazzle_llama_jni.c  simsimd_lib.c  strip_pac_bti.py  tfi_module.c  valkeysearch_module.cc
sdk/cpp/: CMakeLists.txt  dazzle_capi.c
sdk/cpp-server/: CHANGELOG.md  README.md
sdk/dotnet/: .gitignore  CHANGELOG.md  Dazzle.NET.csproj  Dazzle.NET.sln  README.md
sdk/ios/: CHANGELOG.md  Package.resolved  Package.swift  README.md  build.sh
sdk/react-native/dazzle-react-native/android/: CMakeLists.txt  build.gradle
sdk/react-native/dazzle-react-native/android/src/main/java/dev/dazzle/rn/: DazzleReactNativeModule.kt  DazzleReactNativePackage.kt
sdk/react-native/dazzle-react-native/android/src/main/jni/: dazzle_rn_jsi.cpp
tests/c/: .gitignore  Makefile  test_batch.c
(+1123 files in other folders)
